[gd_scene load_steps=34 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://animations/run/run2.png" type="Texture" id=2]
[ext_resource path="res://animations/run/run4.png" type="Texture" id=3]
[ext_resource path="res://animations/run/run5.png" type="Texture" id=4]
[ext_resource path="res://animations/run/run1.png" type="Texture" id=5]
[ext_resource path="res://animations/run/run3.png" type="Texture" id=6]
[ext_resource path="res://animations/run/run6.png" type="Texture" id=7]
[ext_resource path="res://animations/run/run7.png" type="Texture" id=8]
[ext_resource path="res://animations/jump/jump5.png" type="Texture" id=9]
[ext_resource path="res://animations/run_right/run_right6.png" type="Texture" id=10]
[ext_resource path="res://animations/jump/jump3.png" type="Texture" id=11]
[ext_resource path="res://animations/run_right/run_right7.png" type="Texture" id=12]
[ext_resource path="res://animations/run_right/run_right4.png" type="Texture" id=13]
[ext_resource path="res://animations/run_left/run_left2.png" type="Texture" id=14]
[ext_resource path="res://animations/run_right/run_right2.png" type="Texture" id=15]
[ext_resource path="res://animations/jump/jump6.png" type="Texture" id=16]
[ext_resource path="res://animations/run_left/run_left6.png" type="Texture" id=17]
[ext_resource path="res://animations/run_left/run_left4.png" type="Texture" id=18]
[ext_resource path="res://animations/run/run8.png" type="Texture" id=19]
[ext_resource path="res://animations/run_right/run_right3.png" type="Texture" id=20]
[ext_resource path="res://animations/run_left/run_left8.png" type="Texture" id=21]
[ext_resource path="res://animations/run_right/run_right1.png" type="Texture" id=22]
[ext_resource path="res://animations/run_right/run_right5.png" type="Texture" id=23]
[ext_resource path="res://animations/run_right/run_right8.png" type="Texture" id=24]
[ext_resource path="res://animations/jump/jump2.png" type="Texture" id=25]
[ext_resource path="res://animations/jump/jump1.png" type="Texture" id=26]
[ext_resource path="res://animations/run_left/run_left1.png" type="Texture" id=27]
[ext_resource path="res://animations/run_left/run_left3.png" type="Texture" id=28]
[ext_resource path="res://animations/jump/jump4.png" type="Texture" id=29]
[ext_resource path="res://animations/run_left/run_left5.png" type="Texture" id=30]
[ext_resource path="res://animations/run_left/run_left7.png" type="Texture" id=31]
[ext_resource path="res://sounds/boing.ogg" type="AudioStream" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 14 ), ExtResource( 28 ), ExtResource( 18 ), ExtResource( 30 ), ExtResource( 17 ), ExtResource( 31 ), ExtResource( 21 ) ],
"loop": true,
"name": "run_left",
"speed": 12.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 19 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 11 ), ExtResource( 29 ), ExtResource( 9 ), ExtResource( 16 ) ],
"loop": false,
"name": "jump",
"speed": 12.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 13 ), ExtResource( 23 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 24 ) ],
"loop": true,
"name": "run_right",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( -0.00461864, -0.0327921 )
scale = Vector2( 1.08405, 1 )
script = ExtResource( 1 )

[node name="Animation" type="AnimatedSprite" parent="."]
position = Vector2( 28.2848, 32.7111 )
scale = Vector2( 0.189741, 0.216363 )
frames = SubResource( 1 )
animation = "run"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionRun" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 32.636, 3.45305 )
scale = Vector2( 0.972732, 2.33981 )
polygon = PoolVector2Array( -4.34602, 1.20877, -5.1523, 2.29888, -4.07726, 2.98525, -4.70437, 4.07535, -4.25643, 4.80209, -4.34602, 5.56921, -3.8085, 6.86119, -3.00222, 8.03205, -4.88354, 9.64702, -8.91495, 11.1409, -11.6921, 12.1502, -15.4548, 14.0075, -16.709, 15.0168, -17.5153, 13.6441, -18.3216, 13.4018, -21.0092, 13.8863, -24.1447, 15.9051, -25.9364, 19.3369, -25.9364, 26.2813, -25.6677, 26.5639, -1.21049, 26.6043, -1.21049, 23.4551, -0.493786, 21.719, -0.941723, 19.0543, -0.76255, 17.4393, 0.222904, 16.9144, 1.74588, 16.3088, 1.65629, 15.2591, 1.92506, 13.8056, 2.82092, 13.1596, 6.85233, 12.554, 11.7796, 11.8676, 13.5713, 11.262, 15.0047, 11.3427, 14.8255, 8.63766, 12.9442, 7.6283, 8.46489, 7.06306, 9.00241, 5.12509, 7.47943, 3.38899, 4.70224, 2.37963, 1.20836, 1.53177, -0.672966, 1.04728, -2.19594, 0.764654 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionJump" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 29.4757, 41.2432 )
rotation = 0.0471184
scale = Vector2( 2.63276, 3.40939 )
polygon = PoolVector2Array( -0.825081, -8.04437, 3.20843, -4.95193, 2.56593, -0.521429, 2.51274, 0.633904, 0.95966, 2.51153, -1.50328, 5.39582, -5.5368, 8.30985, -7.71418, 7.86382, -5.46541, 3.22517, -2.50274, -0.551164, -1.00355, -2.21632, -1.28911, -5.54663, -2.11009, -6.8847 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionRunLeft" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 66.9333, 56.0069 )
scale = Vector2( -9.85042, 4.26515 )
polygon = PoolVector2Array( 3.5891, -9.41621, 4.12763, -9.37823, 4.41586, -9.13136, 4.68133, -7.99197, 4.90888, -6.89056, 4.97714, -6.09298, 4.9999, -5.02955, 5.13643, -4.49783, 5.33364, -4.83965, 5.44741, -4.91561, 5.77356, -4.26995, 5.91768, -3.58632, 5.9556, -2.88369, 5.97836, -0.642884, 5.8039, 0.47752, 5.71288, 1.31307, 5.73564, 2.12964, 3.44498, 2.16762, 3.47532, 1.37004, 3.39189, -0.244096, 3.56634, -0.927732, 3.52083, -1.63036, 3.55876, -2.33298, 3.64219, -2.75076, 3.41464, -3.28248, 3.27811, -4.19399, 3.22502, -4.99157, 2.93679, -5.35238, 2.41343, -5.69419, 2.24656, -6.14995, 2.15554, -7.27035, 2.41343, -8.23884, 2.76992, -8.20086, 3.0809, -8.40975, 3.20985, -9.16934 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionRunRight" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 31.6771, 22.9274 )
rotation = 3.14159
scale = Vector2( 2.52705, 4.36355 )
polygon = PoolVector2Array( 10.1482, -9.77913, -0.285011, -9.76237, -0.311695, -8.2212, 0.302023, -7.06531, 0.35539, -5.89268, 0.141924, -4.93782, -0.258326, -4.40176, -0.952093, -4.2845, -1.99274, -4.60278, -4.34088, -4.82056, -6.0753, -4.87081, -6.76907, -3.99971, -6.52891, -2.76007, -5.54163, -2.49204, -5.30148, -2.10675, -5.30148, -1.72145, -4.10073, -0.0462594, -2.60646, 0.305531, -0.76531, 0.339035, 1.47609, 0.0542517, 3.07709, -0.716337, 4.51799, -1.83872, 5.55864, -2.91084, 6.19904, -3.79869, 7.13296, -2.96109, 8.06688, -2.94434, 9.37436, -3.4469, 9.69456, -3.99971, 10.0681, -5.03833, 10.1482, -6.44549, 9.85466, -6.44549, 9.77461, -7.11557, 9.85466, -7.70189, 9.9614, -8.35521 )
__meta__ = {
"_edit_lock_": true
}

[node name="JumpAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 32 )
